# pyGoogleImages

./: .gitignore  README.md  human.py  pyproject.toml
pyGoogleImages/: __init__.py  models.py  parser.py  searcher.py
tests/: conftest.py  test_models.py  test_parser.py  test_searcher.py
