[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyGoogleImages"
version = "0.1.0"
description = "Async Python client for Google Images search with proxy and safe-search support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["google", "images", "search", "async", "httpx", "anyio"]
dependencies = [
    "httpx>=0.27.0",
    "anyio>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
